<resources>
    <string name="app_name">Graph</string>
    <string name="del_node">delete</string>
    <string name="dfs_graph">dfs</string>
    <string name="bfs_graph">bfs</string>
    <string name="create_graph">create</string>
    <string name="begin_node">开始点</string>
    <string name="end_node">结束点</string>
    <string name="back">取消</string>
    <string name="confirm">确定并结束</string>
    <string name="persis">添加下一个</string>
    <string name="node_index_range">范围为%d～%d</string>
    <string name="graph_init_hint">请先初始化无向图</string>
    <string name="node_index_empty">请输入节点下标</string>
</resources>
